# Learning

./: .gitignore  Learning.ipynb  README.md  bloated_requirements.txt  pyproject.toml
DS-DeepLearning/: tutorial_keras.ipynb
DS-NLP/: README.md
DS-NLP/MaskedLanguageModel/: CustomWebApp.py  tutorial.py
DS-NLP/tutorial_sentdex/: helper.py
DS-ReinforcementLearning/Community/: Agent.py
DS-ReinforcementLearning/JustSnake/: SnakeEnv.py
DS-ReinforcementLearning/tutorial/: snake_game.py  tutorial.ipynb
Exploration-DeepLearning/: tutorial_keras.ipynb
Exploration-NLP/: README.md
Godot-BeatEmUp/: project.godot
Godot-DoomClone/: Player.gd  Player.tscn  World.tscn  Zombie.gd  Zombie.tscn  fps_monster_sprites.png.import  fps_shooter_sprites.png.import  project.godot
Godot-DoomClone/.import/: 1w0rvmz_d.jpg-dd4caf6c3e6a28cdc98aa1bcdfde1120.md5  1w0rvmz_d.jpg-dd4caf6c3e6a28cdc98aa1bcdfde1120.stex  3R0YeFN_d.webp-32f77e7f03c8fd659008357a0d8d0c22.md5  3R0YeFN_d.webp-32f77e7f03c8fd659008357a0d8d0c22.stex  4FzFiAK_d(1).webp-413dfe3f42faeec9dec386c3b7a5db95.md5  4FzFiAK_d(1).webp-413dfe3f42faeec9dec386c3b7a5db95.stex  4FzFiAK_d.webp-da89f6a0c598f49a007022c570203e89.md5  4FzFiAK_d.webp-da89f6a0c598f49a007022c570203e89.stex  4l8AnvL_d.webp-f8b7662d511828c7fd3ce29ba509955b.md5  4l8AnvL_d.webp-f8b7662d511828c7fd3ce29ba509955b.stex  4so04Ai_d.webp-01407a40f2ff8bcec1c21f4e5026ffa8.md5  4so04Ai_d.webp-01407a40f2ff8bcec1c21f4e5026ffa8.stex  (+126 more)
ML-NLP/: pyproject.toml
ML-PyMC/: tutorial.ipynb
tutorial_sentdex/: Learning.ipynb  reddit_helper.pickle  twitter_helper.pickle
(+155 files in other folders)
