[tool.poetry]
name = "nlp-exploration"
version = "0.1.0"
description = ""
authors = ["Tom Marsh <tom.ian.marsh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
numpy = "^1.20.2"
jupyter = "^1.0.0"
nltk = "^3.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
